# osp-chatbot

./: README.md  app.py  chatbot.py  document_processor.py  embedding_indexer.py  pyproject.toml  rag_chain.py  test_embeddings.py  test_huggingface_hub.py
organisation/: assignment.md  planning.md
