[project]
name = "osp-chatbot"
version = "0.0.1"
description = "BIP Haaga Helia 2025 - GenAI Project"
authors = [
    {name = "Paul Zoppoth"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
